buildSrc/src/test/resources/test-projects/invalid-demo/demos/duplicate_one/build.gradle.kts
plugins {
    id("olc.game_engine.demo")
}

demoModule {
    applicationName = "DuplicateOne"
    entryPoint = "demos.duplicateone.main"
}
